NXP-9432 - uninstall dependencies with new solver